added the navbar including css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
+        <nav>
+            <div class="nav-logo"><a href="#"><img src="images/navbar-logo.PNG" alt=""></a></div>
+            <ul class="flex navbar">
+                <li class="nav-leaf"><a href="#"><i class="fas fa-home"></i>&nbsp; Home</a></li>
+                <li class="nav-leaf"><a href="#"><i class="fas fa-box"></i>&nbsp; Collections</a></li>
+                <li class="nav-leaf"><a href="#"><i class="fas fa-shopping-cart"></i>&nbsp; Purchase List</a></li>
+                <li class="nav-leaf"><button>post an add</button></li>
+            </ul>
+        </nav>
+
         <header>
             
         </header>
