added product section and hot ads section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="nav-leaf"><a href="#"><i class="fas fa-home"></i>&nbsp; Home</a></li>
                 <li class="nav-leaf"><a href="#"><i class="fas fa-box"></i>&nbsp; Collections</a></li>
                 <li class="nav-leaf"><a href="#"><i class="fas fa-shopping-cart"></i>&nbsp; Purchase List</a></li>
-                <li class="nav-leaf"><button type="button">post an add</button></li>
+                <!-- <li class="nav-leaf"><button type="button">post an add</button></li> -->
             </ul>
         </nav>
 
@@ -51,16 +51,198 @@
             </div>
         </header>
         <main>
-          <section id="hot-ads">
-                <div class="section-header">
-                    <h2>hot ads</h2>
-                </div>
-                <div class="slider">
-                    <div>
-                        <img src="images/ads-img.jfif" alt="">
+            <section id="hot-ads">
+                    <div class="hot-ads-header">
+                        <h2>hot ads</h2>
                     </div>
-            </div>
-          </section>
+                    <div class="slider">
+                        <div class="slider-content-container flex">                    
+                            <img src="images/ads-img.jfif" alt="wheel">
+                            <div class="ad-info" >
+                                <h3>Motercycle Supermoto Rims</h3>
+                                <div>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
+                                </div>
+                                <div>
+                                    <p><b>By</b> John Doe</p>
+                                    <p><b>Location</b> San Fransisco California</p>    
+                                </div>
+                                <div class="flex ad-info-buttons">
+                                    <button type="button">$450</button>
+                                    <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
+                                </div>             
+                            </div>
+                        </div>
+                    </div>
+            </section>
+            <section class="product-section">
+                <div class="section-header">
+                    <h2><i class="fas fa-bolt"></i> Electronics</h2>
+                    <p>spark plugs, lights, dynamo's and navigation </p>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+            </section>
+            <section class="product-section">
+                <div class="section-header">
+                    <h2><i class="fas fa-bolt"></i> Electronics</h2>
+                    <p>spark plugs, lights, dynamo's and navigation </p>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+            </section>
+            <section class="product-section">
+                <div class="section-header">
+                    <h2><i class="fas fa-bolt"></i> Electronics</h2>
+                    <p>spark plugs, lights, dynamo's and navigation </p>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+            </section>
+            <section class="product-section">
+                <div class="section-header">
+                    <h2><i class="fas fa-bolt"></i> Electronics</h2>
+                    <p>spark plugs, lights, dynamo's and navigation </p>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="images/spark-plug.jfif" alt="spark plug">
+                    <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                    <p><b>From</b> San Fransisco California</p>
+                    <div class="product-price flex">
+                        <button type="button">+</button>
+                        <p>$25</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
