added css for footer in the second breakpoint

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </section>
         </main>
         <footer>
-            <div>
+            <div class="footer-container">
                 <div class="website-description flex">
                     <img src="images/footer-logo.PNG" alt="logo">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
@@ -367,7 +367,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="bottom-footer">
+                <div class="bottom-footer flex">
                     <div class="copyright-text flex">
                         <p>
                             Copyright© 2015 Zattix.com. All Rights Reserved. Designed by
