--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <script type="text/javascript" src="scripts/script.js"></script>
     </head>
     <body>
@@ -56,10 +57,11 @@
             </div>
         </header>
         <main id="hot-ads">
+            <div class="hot-ads-header">
+                <h2>hot ads</h2>
+            </div>
             <section class="hot-ads-container">
-                    <div class="hot-ads-header">
-                        <h2>hot ads</h2>
-                    </div>
+                   
                     <div class="slider">
                         <div class="slider-content-container flex">                    
                             <img src="images/ads-img.jfif" alt="wheel">
@@ -396,5 +398,6 @@
                 </div>
             </div>
         </footer>
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     </body>
 </html>
