added slider to the hot ads section

--- a/index.html
+++ b/index.html
@@ -60,10 +60,60 @@
             <div class="hot-ads-header">
                 <h2>hot ads</h2>
             </div>
-            <section class="hot-ads-container">
-                   
-                    <div class="slider">
-                        <div class="slider-content-container flex">                    
+            <section class="hot-ads-container">       
+                    <div class="slider main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+                        <div class="slider-content-container flex carousel-cell">                    
+                            <img src="images/ads-img.jfif" alt="wheel">
+                            <div class="ad-info" >
+                                <h3>Motercycle Supermoto Rims</h3>
+                                <div>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
+                                </div>
+                                <div>
+                                    <p><b>By</b> John Doe</p>
+                                    <p><b>Location</b> San Fransisco California</p>    
+                                </div>
+                                <div class="flex ad-info-buttons">
+                                    <button type="button">$450</button>
+                                    <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
+                                </div>             
+                            </div>
+                        </div>
+                        <div class="slider-content-container flex carousel-cell">                    
+                            <img src="images/ads-img.jfif" alt="wheel">
+                            <div class="ad-info" >
+                                <h3>Motercycle Supermoto Rims</h3>
+                                <div>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
+                                </div>
+                                <div>
+                                    <p><b>By</b> John Doe</p>
+                                    <p><b>Location</b> San Fransisco California</p>    
+                                </div>
+                                <div class="flex ad-info-buttons">
+                                    <button type="button">$450</button>
+                                    <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
+                                </div>             
+                            </div>
+                        </div>
+                        <div class="slider-content-container flex carousel-cell">                    
+                            <img src="images/ads-img.jfif" alt="wheel">
+                            <div class="ad-info" >
+                                <h3>Motercycle Supermoto Rims</h3>
+                                <div>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
+                                </div>
+                                <div>
+                                    <p><b>By</b> John Doe</p>
+                                    <p><b>Location</b> San Fransisco California</p>    
+                                </div>
+                                <div class="flex ad-info-buttons">
+                                    <button type="button">$450</button>
+                                    <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
+                                </div>             
+                            </div>
+                        </div>
+                        <div class="slider-content-container flex carousel-cell">                    
                             <img src="images/ads-img.jfif" alt="wheel">
                             <div class="ad-info" >
                                 <h3>Motercycle Supermoto Rims</h3>
