--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                             </div>
                         </div>
                         <div class="slider-content-container flex carousel-cell">                    
-                            <img src="images/ads-img.jfif" alt="wheel">
+                            <img src="images/icon_airflite_rubatone_helmet_black_rollover.jpg" alt="wheel">
                             <div class="ad-info" >
-                                <h3>Motercycle Supermoto Rims</h3>
+                                <h3>Icon Airflite Rubatone Helmet</h3>
                                 <div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
                                 </div>
@@ -91,15 +91,15 @@
                                     <p><b>Location</b> San Fransisco California</p>    
                                 </div>
                                 <div class="flex ad-info-buttons">
-                                    <button type="button">$450</button>
+                                    <button type="button">$250</button>
                                     <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
                                 </div>             
                             </div>
                         </div>
                         <div class="slider-content-container flex carousel-cell">                    
-                            <img src="images/ads-img.jfif" alt="wheel">
+                            <img src="images/revit_jacket_gt_r_air_white_black_1800x1800.jpg" alt="wheel">
                             <div class="ad-info" >
-                                <h3>Motercycle Supermoto Rims</h3>
+                                <h3>REV'IT! GT-R Air 2 Jacket</h3>
                                 <div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
                                 </div>
@@ -108,15 +108,15 @@
                                     <p><b>Location</b> San Fransisco California</p>    
                                 </div>
                                 <div class="flex ad-info-buttons">
-                                    <button type="button">$450</button>
+                                    <button type="button">$200</button>
                                     <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
                                 </div>             
                             </div>
                         </div>
                         <div class="slider-content-container flex carousel-cell">                    
-                            <img src="images/ads-img.jfif" alt="wheel">
+                            <img src="images/hjc_smart10_b_bluetooth_headsetby_sena_750x750.jpg" alt="wheel">
                             <div class="ad-info" >
-                                <h3>Motercycle Supermoto Rims</h3>
+                                <h3>HJC Smart 10B Bluetooth Headset by Sena</h3>
                                 <div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum feugiat magna, elementum porttitor turpis accumsan in. Proin vehicula lacus ut ex imperdiet, in bibendum urna ornare.</p>
                                 </div>
@@ -125,7 +125,7 @@
                                     <p><b>Location</b> San Fransisco California</p>    
                                 </div>
                                 <div class="flex ad-info-buttons">
-                                    <button type="button">$450</button>
+                                    <button type="button">$125</button>
                                     <button type="button"><i class="fas fa-shopping-cart"></i>Purchase details</button>
                                 </div>             
                             </div>
@@ -134,12 +134,12 @@
             </section>
             <div class="section-header flex">
                 <h2><i class="fas fa-bolt"></i> Electronics</h2>
-                <p>{spark plugs, lights, dynamo's and navigation)</p>
+                <p>(spark plugs, lights, dynamo's and navigation)</p>
             </div>
             <section class="product-section">
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
+                        <img src="images/spark-plug.jpg" alt="spark plug">
                         <h3>CR10EK Ngk Yamaha YZF-R6</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
@@ -151,104 +151,116 @@
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/denali_soundbomb_compact_air_horn_black_750x750.jpg" alt="spark plug">
+                        <h3>Denali Soundbomb Compact Air horn</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$80</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/rowe_electronics_pdm60_power_distribution_module_750x750.jpg" alt="spark plug">
+                        <h3>Rowe Electronics PDM60 Power Distribution Module</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$250</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/yuasa_agm_battery_750x750.jpg" alt="spark plug">
+                        <h3>Yuasa AGM Battery</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$100</a></p>
                         </div>
                     </a>
                 </div>
             </section>
             <div class="section-header flex">
                 <h2><i class="fas fa-bolt"></i> Engine Parts</h2>
-                <p>{spark plugs, lights, dynamo's and navigation)</p>
+                <p>(Clutch Covers, Water Pumps, Radiators and Gaskets)</p>
             </div>
             <section class="product-section">
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/boyesen_factory_racing_spectra_clutch_cover_black_750x750.jpg" alt="spark plug">
+                        <h3>Boyesen Factory Racing Spectra Clutch Cover</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$150</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/boyesen_spectra_supercooler_kit_black_750x750.jpg" alt="spark plug">
+                        <h3>Boyesen Spectra Supercooler Kit</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$200</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/fps_racing_radiator_750x750.jpg" alt="spark plug">
+                        <h3>FPS Racing Radiator</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$300</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/cometic_gasket_kit_oil_change_750x750.jpg" alt="spark plug">
+                        <h3>Cometic Oil Change Gasket Kit For Harley 2006-2017</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$11</a></p>
                         </div>
                     </a>
                 </div>
             </section>
             <div class="section-header flex">
                 <h2><i class="fas fa-bolt"></i> Liquids</h2>
-                <p>{spark plugs, lights, dynamo's and navigation)</p>
+                <p>{Fork oil, Engine oil, brake fluid and coolant)</p>
             </div>
             <section class="product-section">
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/61ADuMN5NoL._AC_SY679_.jpg" alt="spark plug">
+                        <h3>Maxima 57916 20WT Standard Hydraulic Fork Oil</h3>
+                        <p class="product-state">New</p>
+                        <p class="product-location"><b>From</b> San Fransisco California</p>
+                        <div class="product-price-section flex">
+                            <button type="button"><b>+</b></button>
+                            <p class="product-price"><a href="#">$15</a></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a class="flex" href="#">
+                        <img src="images/71wCf8cT7ZL._AC_SY606_.jpg" alt="spark plug">
+                        <h3>Motul 104092 Synthetic Engine Oil</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
@@ -259,32 +271,20 @@
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/motul-dot-4-brake-fluid-500ml.jpg" alt="spark plug">
+                        <h3>Motul Dot 4 Brake Fluid 500ml</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$15</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
-                        <p class="product-state">New</p>
-                        <p class="product-location"><b>From</b> San Fransisco California</p>
-                        <div class="product-price-section flex">
-                            <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
-                        </div>
-                    </a>
-                </div>
-                <div class="product">
-                    <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/engine_ice_high_performance_coolant_12_gallon_750x750.jpg" alt="spark plug">
+                        <h3>Engine Ice High Performance Coolant</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
@@ -296,54 +296,54 @@
             </section>
             <div class="section-header flex">
                 <h2><i class="fas fa-bolt"></i> Wheels</h2>
-                <p>{spark plugs, lights, dynamo's and navigation)</p>
+                <p>(Rim, Spokes, Wheel bearings and axle)</p>
             </div>
             <section class="product-section">
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/excel_takasago_rear_rim_black_1800x1800.jpg" alt="spark plug">
+                        <h3>Excel Takasago Rear Rim</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$250</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/excel_front_wheel_spoke_set_silver_rollover.jpg" alt="spark plug">
+                        <h3>Excel Front Wheel Spoke Set</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$100</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/moose_racing_rear_wheel_bearing_kit_rollover.jpg" alt="spark plug">
+                        <h3>Moose Racing Rear Wheel Bearing Kit</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b><b>+</b></b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$35</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/drag_specialties_chrome_rear_axle_kit_for_harley_chrome_750x750.jpg" alt="spark plug">
+                        <h3>Drag Specialties Chrome Rear Axle Kit For Harley</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$60</a></p>
                         </div>
                     </a>
                 </div>
