replaced dummy images on the search page

--- a/search-results.html
+++ b/search-results.html
@@ -133,8 +133,8 @@
                 </div>
                 <div class="product-result">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/spark-plug.jpg" alt="spark plug">
+                        <h3>NGK Spark Plugs - Iridium IX</h3>
                         <p class="product-state">New</p>
                         <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
@@ -146,47 +146,47 @@
                 </div>
                 <div class="product-result">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/accel_u_groove_spark_plugs_for_harley_twin_cam_and_sportster19862014_750x750.jpg" alt="spark plug">
+                        <h3>Accel U-Groove Spark Plugs</h3>
                         <p class="product-state">New</p>
                         <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$50</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product-result">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/motion_pro_pro_plug_socket_750x750.jpg" alt="spark plug">
+                        <h3>Motion Pro Pro Plug Socket</h3>
                         <p class="product-state">New</p>
                         <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$15</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product-result">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/sumax8mm_spark_plug_wires_for_harley_fxr19841999_750x750.jpg" alt="spark plug">
+                        <h3>Sumax 8mm Spark Plug Wires </h3>
                         <p class="product-state">New</p>
                         <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price"><a href="#">$50</a></p>
                         </div>
                     </a>
                 </div>
                 <div class="product-result">
                     <a class="flex" href="#">
-                        <img src="images/spark-plug.jfif" alt="spark plug">
-                        <h3>CR10EK Ngk Yamaha YZF-R6</h3>
+                        <img src="images/ngk_spark_plugs_standard_rollover.jpg" alt="spark plug">
+                        <h3>NGK Spark Plugs - Standard</h3>
                         <p class="product-state">New</p>
                         <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
