added a hover color for the navbar links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
             <div class="nav-small-list-container">
                 <ul class="flex nav-small-list">
-                    <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li><a class="messages" href="#"><i class="fas fa-envelope"></i></a></li>
                     <li class="user-name"><a href="#">John Doe</a></li>
                 </ul>
             </div>
